doc: thesis methods sah and bsah explanation

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -161,7 +161,7 @@ series = {HPG '13}
 }
 
 @misc{blender,
-  author = {blender},
+  author = {Blender},
   title  = {The Cycles Render Engine},
   note   = {URL: \url{https://github.com/blender/cycles/blob/main/examples/objects/suzanne.xml}, Zugriff am: 2. Februar 2026}
 }
