doc: thesis method polish

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -166,3 +166,14 @@ series = {HPG '13}
   note   = {URL: \url{https://github.com/blender/cycles/blob/main/examples/objects/suzanne.xml}, Zugriff am: 2. Februar 2026}
 }
 
+@misc{alecjacobsen,
+  author = {alecjacobson},
+  title  = {common-3d-test-models},
+  note   = {URL: \url{https://github.com/alecjacobson/common-3d-test-models}, Zugriff am: 3. Februar 2026}
+}
+@misc{bly7,
+  author = {Bly7},
+  title  = {OBJ-Loader},
+  note   = {URL: \url{https://github.com/Bly7/OBJ-Loader}, Zugriff am: 3. Februar 2026}
+}
+
