--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -685,7 +685,7 @@ Außerdem wurde die Anzahl an \emph{Hitrays} pro Frame erfasst. Ein Hitray besch
 Die erste Forschungsfrage beschäftigt sich damit, wie sich die Traversal-Time Top-Down konstruierter Wide BVHs abhängig vom Verzweigungsgrad $k \in \{2, 4, 8, 16\}$ verändert. 
 Hierfür dient als Referenz für jede Szene und jedes Splitting-Verfahren eine binäre BVH ($k = 2$). Zum Zweck der Vergleichbarkeit wird das Feld \emph{Speedup} definiert: 
 \[
-Speedup = \frac{T_{\mathrm{\mu, traversal}(k = 2)}}{T_{\mu, \mathrm{traversal}(k)}}
+Speedup = \frac{T_{\mathrm{\mu, traversal}}(k = 2)}{T_{\mu, \mathrm{traversal}}(k)}
 \]
 Dabei bezeichnet $T_{\mathrm{\mu, traversal}(k)}$ den Mittelwert der, wie im Kapitel Methoden gezeigt, aggregierten gemessenen Traversal-Times, abhängig vom Verzweigungsgrad $k$. 
 Werte $Speedup > 1$ gelten als Verbesserung, also geringerer Traversal-Time, gegenüber der binären Referenz. 
@@ -708,7 +708,7 @@ Für $k = 16$ fällt die Performance nochmal deutlich ab mit Mittelwerten zwisch
 Die zweiten Forschungsfrage bezieht sich darauf, inwiefern sich die Traversal-Time zwischen den beiden Untersuchten Verfahren zur Erzeugung einer Wide BVH unterscheidet.
 Zum Einen das direkte k-way-Splitting und zum Anderen das collapsing einer vorher konstruierten binären BVH. Wieder erfolgt der Vergleich über jede Szene und jedes Splitting-verfahren. Speedup hat an dieser Stelle nicht $k = 2$, sondern die collapse-Methode als Referenz. Damit definiert sich ein neuer Vergleichswert:
 \[
-Speedup_{\text{comparison}} = \frac{T_{\mathrm{\mu, traversal}(k, collapse)}}{T_{\mu, \mathrm{traversal}(k, k\text{-}way)}}
+Speedup_{\text{comparison}} = \frac{T_{\mathrm{\mu, traversal}}(k, collapse)}{T_{\mu, \mathrm{traversal}}(k, k\text{-}way)}
 \]
 Wieder bezeichnet $T_{\mathrm{\mu, traversal}}$ den Mittelwert der, wie im Kapitel Methoden gezeigt, aggregierten gemessenen Traversal-Times, diesmal allerdings abhängig von der gewählten Methode zur Erzeugung der Wide BVH bei gleichem Verzweigungsgrad $k$. Es gilt, dass $Speedup_{\text{comparison}} > 1$ bedeutet, dass k-way splitting eine schnellere Traversal-Time besitzt als collapsing, während $Speedup_{\text{comparison}} < 1$ auf einen Vorteil für collapsing hinweist.
 
@@ -728,11 +728,11 @@ Dadurch lässt sich für die untersuchten statischen Szenen kein statistisch sig
 \section{Dynamisches Modell}
 Die dritte und letzte Forschungsfrage untersucht die Modellierung einer dynamischen Szene, bei der die (Re-)Construction der Szene vor jeder Traversal-Phase erforderlich ist. Für die Modellierung wird eine kombinierte Qualitätsmetrik aus Construction- und Traversal-Time verwendet.
 \[
-T_{dynamic}(k) = T_{\mathrm{\mu, construction}(k)} + T_{\mathrm{\mu, traversal}(k)}
+T_{dynamic}(k) = T_{\mathrm{\mu, construction}}(k) + T_{\mathrm{\mu, traversal}}(k)
 \]
-Dabei ist $T_{\mathrm{\mu, construction}(k)}$ den Mittelwert der Construction-Time und $T_{\mathrm{\mu, traversal}(k)}$ den Mittelwert der Traversal-Time, wie im Kapitel Methoden beschrieben. Speedup wird analog zur ersten Forschungsfrage gegenüber $k = 2$ definiert:
+Dabei ist $T_{\mathrm{\mu, construction}}(k)$ den Mittelwert der Construction-Time und $T_{\mathrm{\mu, traversal}}(k)$ den Mittelwert der Traversal-Time, wie im Kapitel Methoden beschrieben. Speedup wird analog zur ersten Forschungsfrage gegenüber $k = 2$ definiert:
 \[
-Speedup_{dynamic} = \frac{T_{\mathrm{\mu, dynamic}(k = 2)}}{T_{\mu, \mathrm{dynamic}(k)}}
+Speedup_{dynamic} = \frac{T_{\mathrm{\mu, dynamic}}(k = 2)}{T_{\mu, \mathrm{dynamic}}(k)}
 \]
 Ebenso entspricht $Speedup_{dynamic} > 1$ einer Verbesserung der kombinierten Metrik.
 
