fix: graphs and latex tables wip

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -692,9 +692,7 @@ Werte $Speedup > 1$ gelten als Verbesserung, also geringerer Traversal-Time, geg
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.2]{results/static_combined_speedup_k4.png}
-    \includegraphics[scale=0.2]{results/static_combined_speedup_k8.png}
-    \includegraphics[scale=0.2]{results/static_combined_speedup_k16.png}
+    \includegraphics[width=\textwidth]{results/rq1_heatmap_grid_collapsed.png}
     \caption{Abbildung Traversal-Speedup für statische Szenen}
     \label{fig:static}
 \end{figure}
@@ -838,6 +836,7 @@ https://github.com/insomnick/raytracingdemo
 \begin{center}
     \input{results/static_statistical_results_table.tex}
     \input{results/comparison_statistical_results_table.tex}
+    \newpage
     \input{results/dynamic_statistical_results_table.tex}
 \end{center}
 
