--- a/thesis/results/dynamic_statistical_results_table.tex
+++ b/thesis/results/dynamic_statistical_results_table.tex
@@ -1,10 +1,10 @@
-\begin{longtable}{llrllll}
-\caption{Statistical Analysis Results} \label{tab:dynamic} \\
+\begin{longtable}{@{\extracolsep{\fill}}llrlrlr}
+\caption{Dynamic Statistical Results} \label{tab:dynamic} \\
 \toprule
 Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \midrule
 \endfirsthead
-\caption[]{Statistical Analysis Results} \\
+\caption[]{Dynamic Statistical Results} \\
 \toprule
 Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \midrule
@@ -15,76 +15,76 @@ Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \endfoot
 \bottomrule
 \endlastfoot
-armadillo & bsah & 4 & k-way & 0.998 & [0.989, 1.007] & 6.59e-01 \\
-stanford-bunny & bsah & 4 & k-way & 1.007 & [1.001, 1.015] & 1.18e-01 \\
-suzanne & bsah & 4 & k-way & 1.081 & [1.076, 1.089] & 4.97e-09*** \\
-teapot & bsah & 4 & k-way & 1.036 & [1.031, 1.043] & 3.03e-06*** \\
-armadillo & median & 4 & k-way & 1.015 & [1.011, 1.023] & 2.36e-03** \\
-stanford-bunny & median & 4 & k-way & 1.025 & [1.021, 1.033] & 9.93e-05*** \\
-suzanne & median & 4 & k-way & 1.069 & [1.064, 1.077] & 4.18e-08*** \\
-teapot & median & 4 & k-way & 1.064 & [1.059, 1.073] & 4.49e-08*** \\
-armadillo & sah & 4 & k-way & 0.996 & [0.994, 0.998] & 5.60e-03** \\
-stanford-bunny & sah & 4 & k-way & 1.004 & [1.001, 1.006] & 9.52e-03** \\
-suzanne & sah & 4 & k-way & 1.073 & [1.071, 1.075] & 1.45e-20*** \\
-teapot & sah & 4 & k-way & 1.029 & [1.027, 1.030] & 9.72e-20*** \\
-armadillo & bsah & 4 & collapsed & 1.002 & [0.997, 1.009] & 5.91e-01 \\
-stanford-bunny & bsah & 4 & collapsed & 1.008 & [1.003, 1.016] & 5.53e-02 \\
-suzanne & bsah & 4 & collapsed & 1.081 & [1.076, 1.089] & 5.50e-09*** \\
-teapot & bsah & 4 & collapsed & 1.034 & [1.030, 1.042] & 3.99e-06*** \\
-armadillo & median & 4 & collapsed & 1.015 & [1.011, 1.023] & 2.64e-03** \\
-stanford-bunny & median & 4 & collapsed & 1.023 & [1.015, 1.032] & 1.50e-04*** \\
-suzanne & median & 4 & collapsed & 1.069 & [1.064, 1.078] & 3.90e-08*** \\
-teapot & median & 4 & collapsed & 1.064 & [1.059, 1.073] & 6.75e-08*** \\
-armadillo & sah & 4 & collapsed & 0.996 & [0.995, 0.998] & 6.33e-04*** \\
-stanford-bunny & sah & 4 & collapsed & 1.004 & [1.002, 1.006] & 6.49e-03** \\
-suzanne & sah & 4 & collapsed & 1.072 & [1.070, 1.074] & 9.14e-19*** \\
-teapot & sah & 4 & collapsed & 1.029 & [1.028, 1.030] & 2.32e-17*** \\
-armadillo & bsah & 8 & k-way & 0.862 & [0.858, 0.867] & 7.72e-13*** \\
-stanford-bunny & bsah & 8 & k-way & 0.845 & [0.841, 0.851] & 7.65e-13*** \\
-suzanne & bsah & 8 & k-way & 0.772 & [0.768, 0.778] & 4.45e-15*** \\
-teapot & bsah & 8 & k-way & 0.738 & [0.735, 0.743] & 4.31e-16*** \\
-armadillo & median & 8 & k-way & 0.737 & [0.734, 0.743] & 2.12e-15*** \\
-stanford-bunny & median & 8 & k-way & 0.779 & [0.776, 0.785] & 4.09e-14*** \\
-suzanne & median & 8 & k-way & 0.757 & [0.754, 0.764] & 6.49e-15*** \\
-teapot & median & 8 & k-way & 0.712 & [0.708, 0.717] & 2.49e-16*** \\
-armadillo & sah & 8 & k-way & 0.865 & [0.864, 0.866] & 1.18e-32*** \\
-stanford-bunny & sah & 8 & k-way & 0.842 & [0.840, 0.844] & 7.80e-28*** \\
-suzanne & sah & 8 & k-way & 0.753 & [0.752, 0.755] & 1.22e-34*** \\
-teapot & sah & 8 & k-way & 0.732 & [0.731, 0.733] & 6.94e-38*** \\
-armadillo & bsah & 8 & collapsed & 0.862 & [0.858, 0.868] & 2.03e-12*** \\
-stanford-bunny & bsah & 8 & collapsed & 0.844 & [0.839, 0.851] & 3.52e-14*** \\
-suzanne & bsah & 8 & collapsed & 0.771 & [0.766, 0.777] & 3.93e-20*** \\
-teapot & bsah & 8 & collapsed & 0.737 & [0.734, 0.743] & 9.24e-16*** \\
-armadillo & median & 8 & collapsed & 0.737 & [0.733, 0.742] & 2.54e-15*** \\
-stanford-bunny & median & 8 & collapsed & 0.778 & [0.775, 0.785] & 7.53e-15*** \\
-suzanne & median & 8 & collapsed & 0.758 & [0.754, 0.764] & 7.94e-15*** \\
-teapot & median & 8 & collapsed & 0.712 & [0.708, 0.717] & 6.87e-16*** \\
-armadillo & sah & 8 & collapsed & 0.865 & [0.864, 0.866] & 3.66e-32*** \\
-stanford-bunny & sah & 8 & collapsed & 0.842 & [0.840, 0.844] & 1.08e-28*** \\
-suzanne & sah & 8 & collapsed & 0.754 & [0.753, 0.755] & 7.40e-25*** \\
-teapot & sah & 8 & collapsed & 0.733 & [0.732, 0.734] & 4.23e-35*** \\
-armadillo & bsah & 16 & k-way & 0.288 & [0.287, 0.290] & 1.68e-34*** \\
-stanford-bunny & bsah & 16 & k-way & 0.286 & [0.285, 0.289] & 7.67e-30*** \\
-suzanne & bsah & 16 & k-way & 0.168 & [0.167, 0.170] & 1.11e-42*** \\
-teapot & bsah & 16 & k-way & 0.177 & [0.177, 0.179] & 7.05e-44*** \\
-armadillo & median & 16 & k-way & 0.156 & [0.155, 0.157] & 3.84e-43*** \\
-stanford-bunny & median & 16 & k-way & 0.194 & [0.193, 0.195] & 1.75e-37*** \\
-suzanne & median & 16 & k-way & 0.169 & [0.168, 0.170] & 3.76e-36*** \\
-teapot & median & 16 & k-way & 0.191 & [0.190, 0.193] & 3.23e-41*** \\
-armadillo & sah & 16 & k-way & 0.297 & [0.296, 0.297] & 2.98e-29*** \\
-stanford-bunny & sah & 16 & k-way & 0.289 & [0.288, 0.289] & 3.77e-32*** \\
-suzanne & sah & 16 & k-way & 0.165 & [0.164, 0.165] & 6.36e-31*** \\
-teapot & sah & 16 & k-way & 0.174 & [0.173, 0.174] & 3.12e-29*** \\
-armadillo & bsah & 16 & collapsed & 0.288 & [0.287, 0.290] & 2.27e-34*** \\
-stanford-bunny & bsah & 16 & collapsed & 0.286 & [0.284, 0.288] & 4.74e-38*** \\
-suzanne & bsah & 16 & collapsed & 0.168 & [0.168, 0.170] & 1.16e-36*** \\
-teapot & bsah & 16 & collapsed & 0.177 & [0.177, 0.179] & 2.52e-38*** \\
-armadillo & median & 16 & collapsed & 0.156 & [0.155, 0.157] & 2.77e-44*** \\
-stanford-bunny & median & 16 & collapsed & 0.194 & [0.193, 0.195] & 4.42e-32*** \\
-suzanne & median & 16 & collapsed & 0.169 & [0.168, 0.170] & 2.56e-38*** \\
-teapot & median & 16 & collapsed & 0.191 & [0.190, 0.193] & 2.15e-31*** \\
-armadillo & sah & 16 & collapsed & 0.297 & [0.296, 0.297] & 7.87e-27*** \\
-stanford-bunny & sah & 16 & collapsed & 0.288 & [0.288, 0.289] & 5.11e-45*** \\
-suzanne & sah & 16 & collapsed & 0.164 & [0.164, 0.165] & 1.86e-36*** \\
-teapot & sah & 16 & collapsed & 0.174 & [0.173, 0.174] & 2.50e-28*** \\
+Armadillo & bsah & 4 & k-way & 1.470 & [1.467, 1.472] & 9.49e-37*** \\
+Bunny & bsah & 4 & k-way & 1.365 & [1.363, 1.367] & 1.60e-38*** \\
+Suzanne & bsah & 4 & k-way & 1.090 & [1.088, 1.092] & 9.27e-27*** \\
+Teapot & bsah & 4 & k-way & 1.051 & [1.049, 1.053] & 5.83e-21*** \\
+Armadillo & median & 4 & k-way & 1.146 & [1.144, 1.148] & 3.72e-28*** \\
+Bunny & median & 4 & k-way & 1.170 & [1.166, 1.174] & 1.01e-23*** \\
+Suzanne & median & 4 & k-way & 1.236 & [1.232, 1.239] & 3.13e-18*** \\
+Teapot & median & 4 & k-way & 0.987 & [0.985, 0.989] & 8.19e-09*** \\
+Armadillo & sah & 4 & k-way & 1.117 & [1.115, 1.119] & 8.64e-27*** \\
+Bunny & sah & 4 & k-way & 1.091 & [1.088, 1.093] & 5.73e-15*** \\
+Suzanne & sah & 4 & k-way & 1.098 & [1.094, 1.102] & 1.27e-19*** \\
+Teapot & sah & 4 & k-way & 1.114 & [1.111, 1.116] & 1.13e-19*** \\
+Armadillo & bsah & 4 & collapsed & 1.004 & [1.002, 1.005] & 7.95e-05*** \\
+Bunny & bsah & 4 & collapsed & 1.012 & [1.011, 1.013] & 3.89e-11*** \\
+Suzanne & bsah & 4 & collapsed & 1.092 & [1.090, 1.094] & 1.13e-26*** \\
+Teapot & bsah & 4 & collapsed & 1.035 & [1.033, 1.037] & 8.38e-19*** \\
+Armadillo & median & 4 & collapsed & 0.931 & [0.930, 0.933] & 1.46e-23*** \\
+Bunny & median & 4 & collapsed & 0.944 & [0.941, 0.946] & 1.02e-14*** \\
+Suzanne & median & 4 & collapsed & 0.962 & [0.959, 0.965] & 7.72e-12*** \\
+Teapot & median & 4 & collapsed & 0.955 & [0.953, 0.958] & 5.30e-18*** \\
+Armadillo & sah & 4 & collapsed & 1.004 & [1.003, 1.006] & 8.04e-05*** \\
+Bunny & sah & 4 & collapsed & 1.013 & [1.011, 1.016] & 5.17e-07*** \\
+Suzanne & sah & 4 & collapsed & 1.091 & [1.088, 1.094] & 8.20e-15*** \\
+Teapot & sah & 4 & collapsed & 1.042 & [1.039, 1.044] & 3.06e-16*** \\
+Armadillo & bsah & 8 & k-way & 1.482 & [1.480, 1.484] & 1.39e-31*** \\
+Bunny & bsah & 8 & k-way & 1.343 & [1.342, 1.345] & 3.17e-38*** \\
+Suzanne & bsah & 8 & k-way & 0.790 & [0.789, 0.791] & 7.96e-36*** \\
+Teapot & bsah & 8 & k-way & 0.835 & [0.834, 0.836] & 2.79e-30*** \\
+Armadillo & median & 8 & k-way & 1.026 & [1.023, 1.029] & 4.99e-11*** \\
+Bunny & median & 8 & k-way & 0.921 & [0.918, 0.924] & 3.17e-20*** \\
+Suzanne & median & 8 & k-way & 0.868 & [0.865, 0.870] & 3.91e-23*** \\
+Teapot & median & 8 & k-way & 0.731 & [0.730, 0.733] & 5.59e-32*** \\
+Armadillo & sah & 8 & k-way & 0.958 & [0.956, 0.960] & 3.31e-18*** \\
+Bunny & sah & 8 & k-way & 0.931 & [0.928, 0.933] & 1.33e-18*** \\
+Suzanne & sah & 8 & k-way & 0.801 & [0.798, 0.803] & 2.86e-23*** \\
+Teapot & sah & 8 & k-way & 0.825 & [0.823, 0.826] & 1.53e-28*** \\
+Armadillo & bsah & 8 & collapsed & 0.821 & [0.820, 0.822] & 9.98e-34*** \\
+Bunny & bsah & 8 & collapsed & 0.804 & [0.803, 0.804] & 3.46e-35*** \\
+Suzanne & bsah & 8 & collapsed & 0.739 & [0.738, 0.740] & 7.53e-37*** \\
+Teapot & bsah & 8 & collapsed & 0.713 & [0.711, 0.714] & 4.00e-35*** \\
+Armadillo & median & 8 & collapsed & 0.625 & [0.624, 0.626] & 1.16e-32*** \\
+Bunny & median & 8 & collapsed & 0.669 & [0.667, 0.671] & 3.65e-31*** \\
+Suzanne & median & 8 & collapsed & 0.646 & [0.644, 0.648] & 1.14e-28*** \\
+Teapot & median & 8 & collapsed & 0.605 & [0.603, 0.606] & 6.27e-37*** \\
+Armadillo & sah & 8 & collapsed & 0.847 & [0.846, 0.848] & 4.29e-28*** \\
+Bunny & sah & 8 & collapsed & 0.825 & [0.823, 0.827] & 4.02e-21*** \\
+Suzanne & sah & 8 & collapsed & 0.759 & [0.756, 0.761] & 4.03e-23*** \\
+Teapot & sah & 8 & collapsed & 0.735 & [0.733, 0.736] & 1.89e-28*** \\
+Armadillo & bsah & 16 & k-way & 1.251 & [1.249, 1.252] & 1.11e-29*** \\
+Bunny & bsah & 16 & k-way & 1.154 & [1.153, 1.156] & 9.71e-32*** \\
+Suzanne & bsah & 16 & k-way & 0.632 & [0.631, 0.633] & 4.43e-33*** \\
+Teapot & bsah & 16 & k-way & 0.577 & [0.575, 0.578] & 1.51e-23*** \\
+Armadillo & median & 16 & k-way & 0.650 & [0.649, 0.652] & 1.31e-33*** \\
+Bunny & median & 16 & k-way & 0.589 & [0.587, 0.591] & 2.33e-34*** \\
+Suzanne & median & 16 & k-way & 0.668 & [0.665, 0.670] & 3.91e-33*** \\
+Teapot & median & 16 & k-way & 0.378 & [0.378, 0.379] & 4.36e-33*** \\
+Armadillo & sah & 16 & k-way & 0.671 & [0.669, 0.672] & 8.97e-30*** \\
+Bunny & sah & 16 & k-way & 0.681 & [0.679, 0.683] & 2.25e-26*** \\
+Suzanne & sah & 16 & k-way & 0.571 & [0.570, 0.573] & 1.18e-31*** \\
+Teapot & sah & 16 & k-way & 0.439 & [0.438, 0.440] & 1.09e-36*** \\
+Armadillo & bsah & 16 & collapsed & 0.230 & [0.230, 0.230] & 1.43e-30*** \\
+Bunny & bsah & 16 & collapsed & 0.234 & [0.234, 0.234] & 2.43e-31*** \\
+Suzanne & bsah & 16 & collapsed & 0.158 & [0.158, 0.158] & 4.18e-28*** \\
+Teapot & bsah & 16 & collapsed & 0.163 & [0.163, 0.163] & 3.98e-27*** \\
+Armadillo & median & 16 & collapsed & 0.116 & [0.116, 0.116] & 2.76e-26*** \\
+Bunny & median & 16 & collapsed & 0.147 & [0.147, 0.148] & 2.02e-31*** \\
+Suzanne & median & 16 & collapsed & 0.135 & [0.135, 0.135] & 7.28e-30*** \\
+Teapot & median & 16 & collapsed & 0.154 & [0.154, 0.154] & 1.20e-27*** \\
+Armadillo & sah & 16 & collapsed & 0.258 & [0.258, 0.258] & 3.03e-36*** \\
+Bunny & sah & 16 & collapsed & 0.257 & [0.256, 0.257] & 2.61e-42*** \\
+Suzanne & sah & 16 & collapsed & 0.161 & [0.161, 0.162] & 4.07e-29*** \\
+Teapot & sah & 16 & collapsed & 0.168 & [0.168, 0.169] & 4.52e-53*** \\
 \end{longtable}
