--- a/thesis/results/static_statistical_results_table.tex
+++ b/thesis/results/static_statistical_results_table.tex
@@ -1,10 +1,10 @@
-\begin{longtable}{llrllll}
-\caption{Statistical Analysis Results} \label{tab:static} \\
+\begin{longtable}{@{\extracolsep{\fill}}llrlrlr}
+\caption{Static Statistical Results} \label{tab:static} \\
 \toprule
 Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \midrule
 \endfirsthead
-\caption[]{Statistical Analysis Results} \\
+\caption[]{Static Statistical Results} \\
 \toprule
 Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \midrule
@@ -15,76 +15,76 @@ Model & Algorithm & k & Type & Speedup $\mu$ & Speedup CI & p \\
 \endfoot
 \bottomrule
 \endlastfoot
-armadillo & bsah & 4 & k-way & 1.032 & [1.023, 1.041] & 3.40e-06*** \\
-stanford-bunny & bsah & 4 & k-way & 1.043 & [1.038, 1.052] & 1.65e-07*** \\
-suzanne & bsah & 4 & k-way & 1.082 & [1.077, 1.090] & 3.37e-09*** \\
-teapot & bsah & 4 & k-way & 1.043 & [1.039, 1.051] & 4.93e-07*** \\
-armadillo & median & 4 & k-way & 1.050 & [1.045, 1.058] & 3.11e-07*** \\
-stanford-bunny & median & 4 & k-way & 1.061 & [1.056, 1.069] & 8.86e-08*** \\
-suzanne & median & 4 & k-way & 1.069 & [1.064, 1.078] & 3.92e-08*** \\
-teapot & median & 4 & k-way & 1.069 & [1.063, 1.078] & 2.01e-08*** \\
-armadillo & sah & 4 & k-way & 1.033 & [1.030, 1.035] & 1.74e-14*** \\
-stanford-bunny & sah & 4 & k-way & 1.038 & [1.036, 1.040] & 1.38e-18*** \\
-suzanne & sah & 4 & k-way & 1.074 & [1.073, 1.076] & 2.92e-20*** \\
-teapot & sah & 4 & k-way & 1.036 & [1.035, 1.037] & 1.73e-21*** \\
-armadillo & bsah & 4 & collapsed & 1.036 & [1.031, 1.043] & 1.09e-06*** \\
-stanford-bunny & bsah & 4 & collapsed & 1.045 & [1.040, 1.053] & 3.23e-07*** \\
-suzanne & bsah & 4 & collapsed & 1.082 & [1.077, 1.090] & 3.73e-09*** \\
-teapot & bsah & 4 & collapsed & 1.042 & [1.037, 1.049] & 5.79e-07*** \\
-armadillo & median & 4 & collapsed & 1.050 & [1.045, 1.058] & 2.88e-07*** \\
-stanford-bunny & median & 4 & collapsed & 1.057 & [1.046, 1.068] & 5.24e-09*** \\
-suzanne & median & 4 & collapsed & 1.070 & [1.065, 1.078] & 3.65e-08*** \\
-teapot & median & 4 & collapsed & 1.069 & [1.064, 1.078] & 3.25e-08*** \\
-armadillo & sah & 4 & collapsed & 1.032 & [1.030, 1.034] & 1.13e-14*** \\
-stanford-bunny & sah & 4 & collapsed & 1.038 & [1.036, 1.040] & 5.44e-17*** \\
-suzanne & sah & 4 & collapsed & 1.074 & [1.072, 1.075] & 9.59e-19*** \\
-teapot & sah & 4 & collapsed & 1.036 & [1.035, 1.037] & 1.66e-19*** \\
-armadillo & bsah & 8 & k-way & 0.646 & [0.644, 0.651] & 1.10e-19*** \\
-stanford-bunny & bsah & 8 & k-way & 0.668 & [0.665, 0.673] & 1.46e-17*** \\
-suzanne & bsah & 8 & k-way & 0.770 & [0.766, 0.775] & 2.59e-15*** \\
-teapot & bsah & 8 & k-way & 0.712 & [0.709, 0.717] & 6.97e-17*** \\
-armadillo & median & 8 & k-way & 0.633 & [0.630, 0.638] & 1.82e-17*** \\
-stanford-bunny & median & 8 & k-way & 0.716 & [0.712, 0.721] & 2.15e-15*** \\
-suzanne & median & 8 & k-way & 0.757 & [0.753, 0.763] & 6.21e-15*** \\
-teapot & median & 8 & k-way & 0.704 & [0.701, 0.710] & 1.34e-16*** \\
-armadillo & sah & 8 & k-way & 0.645 & [0.644, 0.646] & 2.96e-40*** \\
-stanford-bunny & sah & 8 & k-way & 0.656 & [0.655, 0.657] & 1.15e-33*** \\
-suzanne & sah & 8 & k-way & 0.751 & [0.750, 0.752] & 1.14e-34*** \\
-teapot & sah & 8 & k-way & 0.705 & [0.704, 0.706] & 3.06e-37*** \\
-armadillo & bsah & 8 & collapsed & 0.646 & [0.643, 0.650] & 1.74e-18*** \\
-stanford-bunny & bsah & 8 & collapsed & 0.668 & [0.663, 0.673] & 7.15e-26*** \\
-suzanne & bsah & 8 & collapsed & 0.768 & [0.764, 0.775] & 1.34e-20*** \\
-teapot & bsah & 8 & collapsed & 0.711 & [0.708, 0.716] & 1.64e-16*** \\
-armadillo & median & 8 & collapsed & 0.633 & [0.630, 0.637] & 3.06e-17*** \\
-stanford-bunny & median & 8 & collapsed & 0.715 & [0.712, 0.721] & 3.32e-16*** \\
-suzanne & median & 8 & collapsed & 0.758 & [0.754, 0.764] & 7.62e-15*** \\
-teapot & median & 8 & collapsed & 0.704 & [0.701, 0.710] & 3.95e-16*** \\
-armadillo & sah & 8 & collapsed & 0.645 & [0.644, 0.646] & 2.50e-34*** \\
-stanford-bunny & sah & 8 & collapsed & 0.656 & [0.655, 0.657] & 4.46e-38*** \\
-suzanne & sah & 8 & collapsed & 0.751 & [0.750, 0.752] & 3.19e-25*** \\
-teapot & sah & 8 & collapsed & 0.706 & [0.705, 0.707] & 2.36e-33*** \\
-armadillo & bsah & 16 & k-way & 0.098 & [0.098, 0.099] & 6.08e-38*** \\
-stanford-bunny & bsah & 16 & k-way & 0.123 & [0.123, 0.124] & 4.96e-47*** \\
-suzanne & bsah & 16 & k-way & 0.166 & [0.165, 0.167] & 2.04e-43*** \\
-teapot & bsah & 16 & k-way & 0.158 & [0.157, 0.159] & 7.07e-44*** \\
-armadillo & median & 16 & k-way & 0.097 & [0.096, 0.097] & 3.42e-45*** \\
-stanford-bunny & median & 16 & k-way & 0.138 & [0.138, 0.139] & 2.99e-45*** \\
-suzanne & median & 16 & k-way & 0.169 & [0.168, 0.170] & 2.88e-36*** \\
-teapot & median & 16 & k-way & 0.185 & [0.184, 0.187] & 3.51e-42*** \\
-armadillo & sah & 16 & k-way & 0.097 & [0.097, 0.097] & 5.02e-27*** \\
-stanford-bunny & sah & 16 & k-way & 0.120 & [0.119, 0.120] & 1.70e-27*** \\
-suzanne & sah & 16 & k-way & 0.162 & [0.162, 0.163] & 7.05e-31*** \\
-teapot & sah & 16 & k-way & 0.154 & [0.154, 0.154] & 1.03e-28*** \\
-armadillo & bsah & 16 & collapsed & 0.099 & [0.098, 0.099] & 1.59e-34*** \\
-stanford-bunny & bsah & 16 & collapsed & 0.123 & [0.122, 0.124] & 2.09e-30*** \\
-suzanne & bsah & 16 & collapsed & 0.166 & [0.166, 0.168] & 1.21e-37*** \\
-teapot & bsah & 16 & collapsed & 0.158 & [0.157, 0.159] & 2.76e-42*** \\
-armadillo & median & 16 & collapsed & 0.097 & [0.096, 0.097] & 9.59e-43*** \\
-stanford-bunny & median & 16 & collapsed & 0.138 & [0.137, 0.139] & 1.86e-40*** \\
-suzanne & median & 16 & collapsed & 0.169 & [0.168, 0.170] & 1.91e-38*** \\
-teapot & median & 16 & collapsed & 0.185 & [0.184, 0.187] & 2.17e-32*** \\
-armadillo & sah & 16 & collapsed & 0.097 & [0.097, 0.098] & 9.06e-26*** \\
-stanford-bunny & sah & 16 & collapsed & 0.119 & [0.119, 0.120] & 1.06e-31*** \\
-suzanne & sah & 16 & collapsed & 0.162 & [0.162, 0.163] & 1.52e-36*** \\
-teapot & sah & 16 & collapsed & 0.154 & [0.154, 0.154] & 6.23e-28*** \\
+Armadillo & bsah & 4 & k-way & 1.020 & [1.018, 1.023] & 8.76e-11*** \\
+Bunny & bsah & 4 & k-way & 0.995 & [0.994, 0.996] & 2.60e-06*** \\
+Suzanne & bsah & 4 & k-way & 1.085 & [1.083, 1.087] & 3.17e-26*** \\
+Teapot & bsah & 4 & k-way & 1.003 & [1.001, 1.005] & 4.46e-03** \\
+Armadillo & median & 4 & k-way & 0.981 & [0.978, 0.983] & 1.28e-12*** \\
+Bunny & median & 4 & k-way & 1.032 & [1.029, 1.036] & 1.91e-12*** \\
+Suzanne & median & 4 & k-way & 1.234 & [1.231, 1.238] & 2.92e-18*** \\
+Teapot & median & 4 & k-way & 0.975 & [0.973, 0.977] & 1.12e-13*** \\
+Armadillo & sah & 4 & k-way & 1.047 & [1.044, 1.050] & 1.16e-15*** \\
+Bunny & sah & 4 & k-way & 1.028 & [1.025, 1.030] & 1.28e-10*** \\
+Suzanne & sah & 4 & k-way & 1.097 & [1.093, 1.101] & 1.48e-19*** \\
+Teapot & sah & 4 & k-way & 1.109 & [1.107, 1.111] & 6.26e-19*** \\
+Armadillo & bsah & 4 & collapsed & 1.042 & [1.041, 1.044] & 1.99e-17*** \\
+Bunny & bsah & 4 & collapsed & 1.050 & [1.047, 1.052] & 1.03e-14*** \\
+Suzanne & bsah & 4 & collapsed & 1.093 & [1.092, 1.095] & 7.29e-27*** \\
+Teapot & bsah & 4 & collapsed & 1.041 & [1.040, 1.043] & 2.26e-20*** \\
+Armadillo & median & 4 & collapsed & 0.932 & [0.930, 0.933] & 9.24e-23*** \\
+Bunny & median & 4 & collapsed & 0.951 & [0.948, 0.954] & 1.30e-14*** \\
+Suzanne & median & 4 & collapsed & 0.962 & [0.959, 0.965] & 8.64e-12*** \\
+Teapot & median & 4 & collapsed & 0.957 & [0.954, 0.959] & 3.71e-18*** \\
+Armadillo & sah & 4 & collapsed & 1.052 & [1.049, 1.054] & 2.14e-14*** \\
+Bunny & sah & 4 & collapsed & 1.058 & [1.055, 1.061] & 7.81e-14*** \\
+Suzanne & sah & 4 & collapsed & 1.093 & [1.090, 1.096] & 7.09e-15*** \\
+Teapot & sah & 4 & collapsed & 1.050 & [1.048, 1.053] & 2.74e-17*** \\
+Armadillo & bsah & 8 & k-way & 0.764 & [0.763, 0.766] & 4.30e-35*** \\
+Bunny & bsah & 8 & k-way & 0.792 & [0.791, 0.793] & 6.87e-34*** \\
+Suzanne & bsah & 8 & k-way & 0.784 & [0.783, 0.785] & 4.97e-36*** \\
+Teapot & bsah & 8 & k-way & 0.777 & [0.776, 0.778] & 1.80e-33*** \\
+Armadillo & median & 8 & k-way & 0.782 & [0.780, 0.784] & 4.49e-23*** \\
+Bunny & median & 8 & k-way & 0.752 & [0.749, 0.754] & 2.35e-30*** \\
+Suzanne & median & 8 & k-way & 0.866 & [0.863, 0.869] & 3.02e-23*** \\
+Teapot & median & 8 & k-way & 0.716 & [0.715, 0.718] & 1.88e-32*** \\
+Armadillo & sah & 8 & k-way & 0.787 & [0.785, 0.789] & 4.17e-27*** \\
+Bunny & sah & 8 & k-way & 0.801 & [0.799, 0.803] & 1.44e-26*** \\
+Suzanne & sah & 8 & k-way & 0.798 & [0.795, 0.800] & 7.64e-23*** \\
+Teapot & sah & 8 & k-way & 0.803 & [0.801, 0.805] & 7.21e-29*** \\
+Armadillo & bsah & 8 & collapsed & 0.629 & [0.628, 0.630] & 1.03e-39*** \\
+Bunny & bsah & 8 & collapsed & 0.650 & [0.649, 0.650] & 3.67e-39*** \\
+Suzanne & bsah & 8 & collapsed & 0.737 & [0.736, 0.738] & 2.19e-37*** \\
+Teapot & bsah & 8 & collapsed & 0.693 & [0.692, 0.694] & 2.18e-36*** \\
+Armadillo & median & 8 & collapsed & 0.529 & [0.528, 0.530] & 9.99e-30*** \\
+Bunny & median & 8 & collapsed & 0.604 & [0.602, 0.606] & 5.76e-35*** \\
+Suzanne & median & 8 & collapsed & 0.646 & [0.644, 0.647] & 1.13e-28*** \\
+Teapot & median & 8 & collapsed & 0.598 & [0.597, 0.599] & 5.24e-38*** \\
+Armadillo & sah & 8 & collapsed & 0.648 & [0.647, 0.650] & 5.70e-26*** \\
+Bunny & sah & 8 & collapsed & 0.661 & [0.659, 0.663] & 2.70e-29*** \\
+Suzanne & sah & 8 & collapsed & 0.757 & [0.755, 0.759] & 7.84e-23*** \\
+Teapot & sah & 8 & collapsed & 0.714 & [0.712, 0.715] & 1.65e-27*** \\
+Armadillo & bsah & 16 & k-way & 0.551 & [0.550, 0.552] & 2.03e-36*** \\
+Bunny & bsah & 16 & k-way & 0.606 & [0.605, 0.606] & 6.51e-34*** \\
+Suzanne & bsah & 16 & k-way & 0.626 & [0.625, 0.627] & 2.36e-33*** \\
+Teapot & bsah & 16 & k-way & 0.530 & [0.529, 0.531] & 4.04e-23*** \\
+Armadillo & median & 16 & k-way & 0.465 & [0.464, 0.466] & 1.36e-33*** \\
+Bunny & median & 16 & k-way & 0.459 & [0.458, 0.461] & 2.19e-34*** \\
+Suzanne & median & 16 & k-way & 0.666 & [0.664, 0.668] & 3.11e-33*** \\
+Teapot & median & 16 & k-way & 0.368 & [0.367, 0.369] & 1.11e-32*** \\
+Armadillo & sah & 16 & k-way & 0.473 & [0.472, 0.475] & 5.35e-27*** \\
+Bunny & sah & 16 & k-way & 0.538 & [0.537, 0.540] & 2.91e-30*** \\
+Suzanne & sah & 16 & k-way & 0.568 & [0.567, 0.570] & 1.58e-30*** \\
+Teapot & sah & 16 & k-way & 0.415 & [0.414, 0.416] & 7.48e-38*** \\
+Armadillo & bsah & 16 & collapsed & 0.093 & [0.093, 0.093] & 3.75e-28*** \\
+Bunny & bsah & 16 & collapsed & 0.116 & [0.116, 0.116] & 5.06e-30*** \\
+Suzanne & bsah & 16 & collapsed & 0.156 & [0.156, 0.157] & 3.23e-28*** \\
+Teapot & bsah & 16 & collapsed & 0.150 & [0.149, 0.150] & 7.33e-27*** \\
+Armadillo & median & 16 & collapsed & 0.077 & [0.077, 0.077] & 4.87e-26*** \\
+Bunny & median & 16 & collapsed & 0.110 & [0.109, 0.110] & 2.82e-29*** \\
+Suzanne & median & 16 & collapsed & 0.135 & [0.134, 0.135] & 8.00e-30*** \\
+Teapot & median & 16 & collapsed & 0.150 & [0.149, 0.150] & 2.78e-27*** \\
+Armadillo & sah & 16 & collapsed & 0.096 & [0.096, 0.096] & 1.06e-31*** \\
+Bunny & sah & 16 & collapsed & 0.119 & [0.118, 0.119] & 5.54e-31*** \\
+Suzanne & sah & 16 & collapsed & 0.159 & [0.159, 0.160] & 4.86e-29*** \\
+Teapot & sah & 16 & collapsed & 0.153 & [0.152, 0.153] & 2.83e-52*** \\
 \end{longtable}
